# allpix-squared

./: .clang-format  .clang-tidy  .cmake-format.yaml  .codespellrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .markdownlintrc  .pre-commit-config.yaml  .proselint.json  .travis.yml  AUTHORS.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE.md  README.md  REUSE.toml  example_tgeo.ini  quick_build.sh  threadpool.cpp
algorithms/: CMakeLists.txt  TestAlgorithm.cpp  TestAlgorithm.hpp
core/: CMakeLists.txt
core/allpix/: Algorithm.hpp  Allpix2.cpp  Allpix2.hpp  allpix.cc  allpix.h
core/detector/: detector.cc  detector.h
core/objs/: AllpixObject.cpp  AllpixObject.hpp
core/utils/: Parameters.hpp  configuration.cc  configuration.h  configuration.hh  utils.h
doc/: CMakeLists.txt  Doxyfile.in  README.md
doc/convert/: cmake_helper.py  convert_markdown.py  pandoc-gitlab-math.lua  pandoc-minted.lua
doc/design/: example_configuration.ini
doc/latex/: allpix-manual.tex  frontmatter.tex  references.bib
doc/reference/: Doxyfile  Doxyfile.in  README.md  favicon.xcf
doc/reference/.doxybook/: config.json  (+1 more)
doc/temp/: Clipboard.hpp  ConfigManager.h  Parameters.cpp  logger.cpp  logger.hpp
doc/tikz/: hexagon_flat.tex  hexagon_grid_flat.tex  hexagon_grid_pointy.tex  hexagon_pointy.tex  staggered.tex  transformations.tex
doc/usermanual/: ExampleModule.hpp  allpix-manual.tex  config.tex  design.tex  references.bib  references.tex  symbols.tex
etc/unittests/: CMakeLists.txt  run_directory.sh
examples/: CMakeLists.txt  detector_passive_materials.conf  deuteron_beryllium.conf  deuteron_lithium.conf  example.conf  example_detector.conf  example_detector_passive.conf  example_electric_field.init  passive_materials.conf  proton_beryllium.conf  proton_lithium.conf  tutorial-geometry.conf  tutorial-simulation.conf
examples/atlas_itk_petal/: README.md  atlas_itk_petal.conf  atlas_itk_petal_geom.conf  atlas_itk_r1.conf  atlas_itk_r2.conf  atlas_itk_r3.conf  atlas_itk_r4.conf  atlas_itk_r5.conf
examples/capacitive_coupling/: README.md  capacitance_matrix.txt  capacitive_coupling.conf  gap_scan_coupling_sim.root
examples/corryvreckan_output/: README.md
examples/corryvreckan_writer/: README.md  corryvreckan_writer.conf  geometry.conf
examples/cosmic_flux/: README.md  cosmic_flux.conf  cosmic_flux_geometry.conf
examples/eudet_RD53/: dut.conf  eudet_2dut.conf
examples/eudet_rd53a/: README.md  dut.conf  dut_1.conf  eudet_rd53a.conf
examples/eudet_telescope/: README.md  eudet_telescope.conf  telescope.conf
examples/eudet_with_rd53a_dut/: README.md  dut.conf  eudet_with_rd53a_dut.conf
examples/fast_simulation/: README.md  fast_simulation.conf  telescope.conf
examples/gdml_passive_material/: README.md  assembly.gdml  assembly2.gdml  detector_setup.conf  gdml_passive_material.conf
examples/gdml_reader/: README.md  detector_setup.conf  gdml_reader.conf
examples/magnetic_field/: README.md  detectors.conf  magnetic_field.conf
examples/neutrons_rfq/: geometry.conf  neutrons_rfq.conf  target.conf
examples/passive_volume/: README.md  example.conf  example_detector_passive.conf  passive_volume.conf
examples/precise_dut/: README.md  precise_dut.conf  telescope_with_dut.conf
examples/radial_strip/: README.md  radial_strip.conf  radial_strip_geometry.conf
examples/replay_simulation/: README.md  replay_simulation.conf
examples/simple-diode/: diode_collimator.conf  source.mac  source_measurement.conf
examples/simple_diode/: Am241_with_paper_collimator.conf  OliverDiode.conf  README.md  diode_collimator.conf  simple_diode.conf  source.mac
examples/source_measurement/: README.md  detector.conf  fe55_measurement.conf  medipix3_shielded.conf  source_measurement.conf
examples/tcad_field_simulation/: README.md  tcad_field_simulation.conf  telescope.conf
models/: CMSp1.conf  CMakeLists.txt  FEI3standard.conf  RD53-25.conf  RD53-50.conf  alpide.conf  atlas_itk_r0.conf  clicpix.conf  clicpix2.conf  cmsp1.conf  diode.conf  edephistogrammer.conf  fei3.conf  fei4.conf  ibl_planar.conf  medipix3.conf  medipix3RX.conf  mimosa23.conf  mimosa26.conf  mimosa26.xml  rd53a-25.conf  rd53a-50.conf  rd53a_25.conf  rd53a_50.conf  test.conf  test.ini  test.xml  test_implants.conf  timepix.conf  timepix3.conf  timepix4.conf  velopix.conf
modules/: CMakeLists.txt  DummyModule.cpp
src/core/: AllPix.cpp  AllPix.hpp  Allpix.cpp  Allpix.hpp  CMakeLists.txt
src/exec/: CMakeLists.txt  allpix.cpp  examples.h
src/messages/: CMakeLists.txt  ChargeDeposit.cpp  ChargeDeposit.hpp  DepositionMessage.cpp  DepositionMessage.hpp
src/modules/: CMakeLists.txt
src/objects/: CMakeLists.txt  ChargeDeposit.cpp  ChargeDeposit.hpp  Cluster.cpp  Cluster.hpp  DepositedCharge.cpp  DepositedCharge.hpp  Linkdef.h  MCParticle.cpp  MCParticle.hpp  MCTrack.cpp  MCTrack.hpp  Object.cpp  Object.hpp  Pixel.cpp  Pixel.hpp  PixelCharge.cpp  PixelCharge.hpp  PixelHit.cpp  PixelHit.hpp  PixelPulse.cpp  PixelPulse.hpp  PropagatedCharge.cpp  PropagatedCharge.hpp  Pulse.cpp  Pulse.hpp  SensorCharge.cpp  SensorCharge.hpp  SensorPulse.cpp  SensorPulse.hpp  exceptions.h  objects.h
tools/: CMakeLists.txt  install-hooks.sh
tools/apf_tools/: CMakeLists.txt  DumpHeader.cpp  FieldConverter.cpp
tools/mesh_converter/: CMakeLists.txt  DFISEParser.cpp  DFISEParser.hpp  MeshConverter.cpp  MeshElement.cpp  MeshElement.hpp  MeshParser.cpp  MeshParser.hpp  MeshPlotter.cpp  README.md  ThreadPool.hpp
tools/root_analysis_macros/: .clang-tidy  CMakeLists.txt  README.md  analysisExample.C  constructComparisonTree.C  display_mc_hits.py  etaCorrectionResiduals.C  recoverConfiguration.C  remakeProject.C
tools/root_macros/: CMakeLists.txt  constructComparisonTree.C
tools/tcad_dfise_converter/: CMakeLists.txt  DFISEParser.cpp  DFISEParser.hpp  MeshConverter.cpp  MeshConverter.hpp  MeshElement.cpp  MeshElement.h  MeshElement.hpp  MeshPlotter.cpp  Octree.hpp  README.md  ThreadPool.hpp  dfise_converter.cpp  dfise_converter.h  mesh_plotter.cpp  read_dfise.cpp  read_dfise.h
(+1271 files in other folders)
